--- a/admin/forms/serie.xml
+++ b/admin/forms/serie.xml
@@ -50,7 +50,7 @@
 		       label="JBS_CMN_DESCRIPTION" filter="CWMProclaimHelper::filterText"
 		       buttons="true"/>
 		<field name="series_thumbnail" type="hidden"/>
-		<field name="image" type="media" label="JBS_CMN_SERIES_THUMBNAIL" labelclass="control-label"/>
+		<field name="image" type="media" directory="biblestudy" label="JBS_CMN_SERIES_THUMBNAIL" labelclass="control-label"/>
 		<field name="access" type="accesslevel" label="JFIELD_ACCESS_LABEL"
 		       description="JFIELD_ACCESS_DESC" class="span12 small" size="1"/>
 		<field name="asset_id" type="hidden" filter="unset"/>
