--- a/admin/forms/message.xml
+++ b/admin/forms/message.xml
@@ -130,7 +130,9 @@
 		</field>
 		<field name="thumbnailm" type="hidden"/>
 		<field name="image" type="media" directory="biblestudy/studies" label="JBS_STY_STUDY_IMAGE" />
-
+		<field name="studyimage" type="StudyImage" label="CWM_STOCK_IMAGE" key_field="key" value_field="value">
+			<option value="-1">CWM_CHOOSE_STOCK_IMAGE</option>
+		</field>
 		<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
 		       translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
 		       section="message" validate="rules"/>
