--- a/site/forms/filter_cwmsermons.xml
+++ b/site/forms/filter_cwmsermons.xml
@@ -4,13 +4,14 @@
 	<fields name="filter">
 		<field
 				name="search"
+				inputmode="search"
 				type="text"
 				label="COM_CONTENT_FILTER_SEARCH_DESC"
 				hint="JSEARCH_FILTER"
 				/>
 		<field
 				name="book"
-				type="booklist"
+				type="BookList"
 				label="JBS_CMN_SELECT_BOOK"
 				description="JBS_CMN_SELECT_BOOK_DESC"
 				onchange="this.form.submit();"
@@ -19,7 +20,7 @@
 		</field>
 		<field
 				name="teacher"
-				type="Teacherlist"
+				type="TeacherList"
 				label="JBS_CMN_SELECT_TEACHER"
 				description="JBS_CMN_SELECT_TEACHER_DESC"
 				onchange="this.form.submit();"
@@ -46,7 +47,7 @@
 		</field>
 		<field
 				name="year"
-				type="yearlist"
+				type="YearList"
 				label="JBS_CMN_SELECT_YEAR"
 				description="JBS_CMN_SELECT_YEAR_DESC"
 				onchange="this.form.submit();"
@@ -103,7 +104,8 @@
 				label="JBSM_CMN_LIST_FULL_ORDERING"
 				description="JBSM_CMN_LIST_FULL_ORDERING_DESC"
 				onchange="this.form.submit();"
-				default=""
+				default="study.studydate DESC"
+				validate="options"
 		>
 			<option value="">JBSM_GRID_SORT_BY</option>
 			<option value="study.studydate ASC">JBSM_GRID_DATE_ASC</option>
@@ -114,10 +116,9 @@
 		<field
 				name="limit"
 				type="limitbox"
-				class="input-mini"
-				default="25"
 				label="COM_CONTENT_LIST_LIMIT"
 				description="COM_CONTENT_LIST_LIMIT_DESC"
+				default="25"
 				onchange="this.form.submit();"
 				/>
 	</fields>
